Fixed h1 icon alignment

--- a/_includes/sass/_home.scss
+++ b/_includes/sass/_home.scss
@@ -86,6 +86,7 @@
 
             .greeting {
               margin-bottom: fluid(5, 10);
+              display: block;
 
               .name {
                 text-decoration: underline var(--primary);
